# SDL

./: CMakeLists.txt  README.md
include/: defines.cpp  init.hpp
lazyfoo.net/assets/: donors.js  light-dark-loader.js  light-dark-toggle.js  style.css
lazyfoo.net/tutorials/SDL3/: index.php.html
lazyfoo.net/tutorials/SDL3/00-introduction/: index.php.html
lazyfoo.net/tutorials/SDL3/01-hello-sdl3/: index.php.html  index2.php.html
lazyfoo.net/tutorials/SDL3/02-textures-and-extension-libraries/: index.php.html
lazyfoo.net/tutorials/SDL3/03-key-presses-and-key-states/: index.php.html
lazyfoo.net/tutorials/SDL3/04-color-keying/: index.php.html
lazyfoo.net/tutorials/SDL3/05-sprite-clipping-and-stretching/: index.php.html
lazyfoo.net/tutorials/SDL3/06-rotation-and-flipping/: index.php.html
lazyfoo.net/tutorials/SDL3/07-color-modulation-and-alpha-blending/: index.php.html
lazyfoo.net/tutorials/SDL3/08-true-type-fonts/: index.php.html
lazyfoo.net/tutorials/SDL3/09-mouse-events/: index.php.html
lazyfoo.net/tutorials/SDL3/10-timing/: index.php.html
lazyfoo.net/tutorials/SDL3/11-advanced-timers/: index.php.html
lazyfoo.net/tutorials/SDL3/12-frame-rate-and-vsync/: index.php.html
lazyfoo.net/tutorials/SDL3/13-motion/: index.php.html
lazyfoo.net/tutorials/SDL3/14-animation/: index.php.html
lazyfoo.net/tutorials/SDL3/15-sound-effects-and-music/: index.php.html
lazyfoo.net/tutorials/SDL3/16-collision-detection/: index.php.html
lazyfoo.net/tutorials/SDL3/17-text-input-and-clipboard-handling/: index.php.html
lazyfoo.net/tutorials/SDL3/18-scrolling/: index.php.html
lazyfoo.net/tutorials/SDL3/19-state-machines/: index.php.html
src/: main.cpp
(+3 files in other folders)
